<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/contacts"
          android:icon="@drawable/ic_contacts"
          android:title="@string/contacts" />
    <item android:id="@+id/map"
          android:icon="@drawable/ic_map"
          android:title="@string/map" />
    <item android:id="@+id/catalog"
          android:icon="@drawable/ic_catalog"
          android:title="@string/catalog" />
    <item android:id="@+id/multimedia"
          android:icon="@drawable/ic_multimedia"
          android:title="@string/multimedia" />
    <item android:id="@+id/laser"
          android:icon="@drawable/ic_laser"
          android:title="@string/laser" />
    <item android:id="@+id/home_menu"
          android:icon="@drawable/ic_home_menu"
          android:title="@string/home_menu" />
</menu>