<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView
	    android:id="@+id/registry_help_icon"
	    android:src="@drawable/ic_help"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true">
	</ImageView>
	<LinearLayout
	    android:id="@+id/l1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_below="@id/registry_help_icon"
		android:layout_centerHorizontal="true">
		<TextView
			android:text="@string/name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp">
		</TextView>
		<EditText
		    android:id="@+id/name_field"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
		</EditText>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/l2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:layout_below="@id/l1">
		<TextView
			android:text="@string/photo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp">
		</TextView>
		<Spinner
			android:id="@+id/photo_spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
		    android:layout_weight="1"
			android:prompt="@string/photo">
		</Spinner>
		<Button
			android:id="@+id/registry_take_photo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/take_photo">
		</Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_below="@id/l2">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginRight="10dp"
			android:orientation="vertical">
			<TextView
				android:text="@string/info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal">
			</TextView>
			<Button
				android:id="@+id/registry_save_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/save"
				android:layout_gravity="center_horizontal">
			</Button>
		</LinearLayout>
		<EditText
			android:id="@+id/info_field"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:inputType="textMultiLine">
		</EditText>
	</LinearLayout>
</RelativeLayout>