<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView
		android:src="@drawable/ic_help"
		android:id="@+id/settings_help_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true">
	</ImageView>
	<LinearLayout
	    android:id="@+id/spinner_button_layout"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:layout_below="@+id/settings_help_icon"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
	    android:layout_centerHorizontal="true">
		<Spinner
		    android:id="@+id/settings_spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:layout_weight="1"
		    android:prompt="@string/species">
		</Spinner>
		<Button
			android:id="@+id/add_tracking_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/add">
		</Button>
	</LinearLayout>
	<Button
		android:id="@+id/done_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/spinner_button_layout"
	    android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
	    android:text="@string/done">
	</Button>
	<LinearLayout
	    android:id="@+id/tracking_layout"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_below="@id/done_button"
	    android:layout_centerHorizontal="true">			    
	</LinearLayout>
</RelativeLayout>